--- a/TestProject/Info.plist
+++ b/TestProject/Info.plist
@@ -21,6 +21,12 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UIPrefersShowingLanguageSettings</key>
 	<true/>
 </dict>
